fix footer alignment in 1500px

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,6 @@
 .footer {
-	padding-left: 200px;
-	margin-top: 67px;
 	padding-bottom: 60px;
+	padding-top: 67px;
 }
 
 .footer__copyright {
